fixed ticket button on mobile

--- a/style.css
+++ b/style.css
@@ -407,10 +407,7 @@ footer div a p {
     margin-bottom: 15px;
   }
 
-  .navLink {
-    background-color: #111111;
-    
-  }
+  
 
   
 }
